--- a/src/scss/components/_agent_individual.scss
+++ b/src/scss/components/_agent_individual.scss
@@ -37,7 +37,7 @@
 			margin-top: 20px;
 			margin-bottom: 20px;
 		}
-		li, li a {
+		li, li a, li .phone {
 			font-family: $hFontM;
 			font-size: 11px;
 			margin-bottom: 10px;
