--- a/wwwroot/_themes/main/partials/property/agent.html
+++ b/wwwroot/_themes/main/partials/property/agent.html
@@ -7,8 +7,8 @@
 	<div class="agent-details">
 		<a href="{{ url }}"><span itemprop="name">{{ title }}</span></a>
 		<ul>
-			{{ if phone }}<li itemprop="phone">{{ theme:partial src="svg/phone" }} {{ phone }}</li>{{ endif }}
-			{{ if email }}<li itemprop="email">{{ theme:partial src="svg/mail" }} {{ email|link }}</li>{{ endif }}
+			{{ if phone }}<li>{{ theme:partial src="svg/phone" }}<span class="phone" itemprop="telephone"> {{ phone }}</span></li>{{ endif }}
+			{{ if email }}<li>{{ theme:partial src="svg/mail" }} <a itemprop="email" href="mailto:{{ email }}"> {{ email }}</a></li>{{ endif }}
 		</ul>
 	</div>
 </div>
@@ -21,7 +21,7 @@
 	<div class="agent-details">
 		<a href="http://beauchampestates.com" target="_blank" rel="noopener noreferrer"><span itemprop="name">Beauchamp Estates</span></a>
 		<ul>
-			<li itemprop="phone">{{ theme:partial src="svg/phone" }} +44 (0) 20 7499 7722</li>
+			<li itemprop="telephone">{{ theme:partial src="svg/phone" }} +44 (0) 20 7499 7722</li>
 			<li itemprop="email">{{ theme:partial src="svg/mail" }}<a href="mailto:info@beauchamp.co.uk">info@beauchamp.co.uk</a></li>
 		</ul>
 	</div>
