removed duplicate shemas for mobile agents

--- a/wwwroot/_themes/main/templates/property.html
+++ b/wwwroot/_themes/main/templates/property.html
@@ -92,7 +92,7 @@
 
 					<div class="agent-internal">
 						<div class="property-agents agent mobile">
-							{{ theme:partial src="property/agent" }}
+							{{ theme:partial src="property/agent_mobile" }}
 						</div>
 					</div>		
 
