featured post update

--- a/src/scss/modules/_featured_post.scss
+++ b/src/scss/modules/_featured_post.scss
@@ -27,11 +27,11 @@
 		img {
 			display: none;
 		}
+		img:parent {
+			display: none;
+		}
 		@include breakpoint($small) {
 			display: block;
-			img {
-				display: none;
-			}
 		}
 	}
 	@include breakpoint($small) {
