--- a/wwwroot/_themes/main/templates/blog_entry.html
+++ b/wwwroot/_themes/main/templates/blog_entry.html
@@ -20,6 +20,11 @@
 					{{ else }}
 					<img class="main-image" src="{{ path src="{{ main_image }}"}}">
 					{{ endif }}
+					{{ if leading_images }}
+					{{ leading_images }}
+					<img src="{{ value }}">
+					{{ /leading_images }}
+					{{ endif }}
 					{{ content }}
 				</div>
 				<div class="blog-right">
