open house changes

--- a/wwwroot/_themes/main/partials/property/openhouse.html
+++ b/wwwroot/_themes/main/partials/property/openhouse.html
@@ -1,10 +1,6 @@
 {{ if streeteasy_status !== "active" }}
 <span>{{ if streeteasy_status == "in-contract"}}In Contract{{ elseif streeteasy_status == "sold" }}Sold{{ elseif streeteasy_status =="off-market" }}Off Market{{ elseif streeteasy_status =="temp-off-market" }}Temporarirly Off Market{{ endif }}</span>
 
-{{ elseif openhouse_appt }}
-<div class="time-slot">
-	<span class="red red-span" id="first-o-h">Open <i class="fa fa-home"></i>: </span> <span class="red red-span">By Appointment Only</span>
-</div>
 {{ else }}
 
 	{{ openhouse_grid }}
@@ -12,7 +8,7 @@
 		{{ if first }} 
 			{{ if date|is_today || date|in_future }}
 			<div class="time-slot">
-				<span class="red red-span" id="first-o-h">Open <i class="fa fa-home"></i>: </span> <span class="red red-span">{{date format="l, F jS" }}: {{ startTime }} - {{ endTime }}</span>
+				<span class="red red-span" id="first-o-h">Open <i class="fa fa-home"></i>: </span> <span class="red red-span">{{date format="l, F jS" }}: {{ startTime }} - {{ endTime }} {{ if apptOnly }} | By Appointment Only{{ endif }}</span>
 			</div>
 			{{ else }}
 			{{ endif }}
@@ -24,7 +20,7 @@
 				<div class="o-h-span display" id="second">
 					<span class="red red-span">Open <i class="fa fa-home"></i>: </span>
 				</div>
-				<span class="red red-span"> {{date format="l, F jS" }}: {{ startTime }} - {{ endTime }}</span>
+				<span class="red red-span"> {{date format="l, F jS" }}: {{ startTime }} - {{ endTime }} {{ if apptOnly }} | By Appointment Only{{ endif }}</span>
 			</div>
 			{{ else }}
 			{{ endif }}
