--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -300,7 +300,7 @@
 			fill: $text-green;
 		}
 	}
-	li, a, span {
+	li, a, .phone {
 		vertical-align: top;
 		font-family: $hFontM;
 		font-size: 11px;
