--- a/wwwroot/_themes/main/layouts/sitemap.html
+++ b/wwwroot/_themes/main/layouts/sitemap.html
@@ -2,7 +2,7 @@
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
 	{{ nav from="/" exclude="sitemap" 	}}
 	<url>
-		<loc>{{ global:site_url }}{{ url }}</loc>
+		<loc>{{ _site_url }}{{ url }}</loc>
 		<lastmod>{{ last_modified format="Y-m-d" }}</lastmod>
 		<changefreq>monthly</changefreq>
 		<priority>0.3</priority>
@@ -10,7 +10,7 @@
 	{{ /nav }}
 	{{ entries:listing folder="agents/garfield" limit="1000" }}
 	<url>
-		<loc>{{ url }}</loc>
+		<loc>{{ _site_url }}{{ url }}</loc>
 		<lastmod>{{ datestamp format="Y-m-d" }}</lastmod>
 		<changefreq>monthly</changefreq>
 		<priority>0.3</priority>
@@ -18,7 +18,7 @@
 	{{ /entries:listing }}
 	{{ entries:listing folder="neighborhoods" max_depth="1" limit="1000" }}
 	<url>
-		<loc>{{ url }}</loc>
+		<loc>{{ _site_url }}{{ url }}</loc>
 		<lastmod>{{ datestamp format="Y-m-d" }}</lastmod>
 		<changefreq>weekly</changefreq>
 		<priority>0.8</priority>
@@ -36,7 +36,7 @@
 	{{ /get_content }}
 	{{ entries:listing folder="blog" max_depth="1" limit="1000" }}
 	<url>
-		<loc>{{ url }}</loc>
+		<loc>{{ _site_url }}{{ url }}</loc>
 		<lastmod>{{ datestamp format="Y-m-d" }}</lastmod>
 		<changefreq>daily</changefreq>
 		<priority>0.8</priority>
@@ -44,7 +44,7 @@
 	{{ /entries:listing }}
 	{{ entries:listing folder="properties/new-york/sale|properties/new-york/rental|properties/international/sale|properties/international/rental" limit="1000" }}
 	<url>
-		<loc>{{ url }}</loc>
+		<loc>{{ _site_url }}{{ url }}</loc>
 		<lastmod>{{ datestamp format="Y-m-d" }}</lastmod>
 		<changefreq>daily</changefreq>
 		<priority>0.8</priority>
