--- a/wwwroot/_themes/main/layouts/sitemap.html
+++ b/wwwroot/_themes/main/layouts/sitemap.html
@@ -1,6 +1,18 @@
 {{ _xml_header }}
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
-	{{ nav from="/" exclude="sitemap" 	}}
+	<url>
+		<loc>{{ _site_url }}properties/new-york</loc>
+		<lastmod>{{ last_modified format="Y-m-d" }}</lastmod>
+		<changefreq>monthly</changefreq>
+		<priority>0.3</priority>
+	</url>
+	<url>
+		<loc>{{ _site_url }}properties/international</loc>
+		<lastmod>{{ last_modified format="Y-m-d" }}</lastmod>
+		<changefreq>monthly</changefreq>
+		<priority>0.3</priority>
+	</url>
+	{{ nav from="/" exclude="sitemap|properties" 	}}
 	<url>
 		<loc>{{ _site_url }}{{ url }}</loc>
 		<lastmod>{{ last_modified format="Y-m-d" }}</lastmod>
