--- a/wwwroot/_themes/main/partials/property_tile.html
+++ b/wwwroot/_themes/main/partials/property_tile.html
@@ -2,9 +2,9 @@
 <div>
 	<a href="{{ url }}" class="property_box slick">
 		<div class="image-wrap">
-<!-- 			<div class='preview-image' style='background-image: url( {{ path src='{{ preview_image }}' }} );'>
-			</div> -->
-			<img nopin= "nopin" class='preview-image' data-lazy="{{ path src='{{ preview_image }}' }}" );>
+			<div class='preview-image' style='background-image: url( {{ path src='{{ preview_image }}' }} );'>
+			</div>
+			<!-- <img nopin= "nopin" class='preview-image' data-lazy="{{ path src='{{ preview_image }}' }}" );> -->
 		</div>
 		<div class="property_tile_info">
 			<div class="top-info">
