--- a/src/scss/modules/_property_tiles.scss
+++ b/src/scss/modules/_property_tiles.scss
@@ -123,13 +123,9 @@
 		height: 100%;
 		width: 100%;
 		transition: all 300ms ease-in-out;
-		// position: absolute;
 		background-color: $light-gray;
-		// background-size: cover;
+		background-size: cover;
 		text-align: center;
-		// width: 100vw;
-		// height: 100vh;
-		// object-fit: cover;
 	}
 	&.property {
 		padding: 10px;
