change beauchamp footer link

--- a/wwwroot/_themes/main/partials/footer.html
+++ b/wwwroot/_themes/main/partials/footer.html
@@ -38,7 +38,7 @@
 
 		<div class="footer-group affiliate">
 			<div>Exclusive Affiliate of</div>
-			<a class="beauchamp" target="_blank" rel="noopener noreferrer" href="http://www.beauchamp.co.uk/en/"><img src="{{ theme:img src="beauchamp_footer.png" }}"></a>
+			<a class="beauchamp" target="_blank" rel="noopener noreferrer" href="http://www.beauchamp.com"><img src="{{ theme:img src="beauchamp_footer.png" }}"></a>
 		</div>
 
 	</div>
